<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareeb"
                android:text="강호동"
                android:textColor="@color/textColor"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tv_static_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquarer"
                android:text="@string/static_text2"
                android:textColor="@color/textColor"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_list_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareeb"
                android:text="칫솔"
                android:textColor="@color/textColor"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tv_static_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquarer"
                android:text="@string/static_text3"
                android:textColor="@color/textColor"
                android:textSize="36sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareeb"
                android:text="38"
                android:textColor="@color/textColor"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/tv_static_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquarer"
                android:text="@string/static_text4"
                android:textColor="@color/textColor"
                android:textSize="36sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_buy_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nanumsquareeb"
        android:text="@string/buy_date"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/tv_oral_supplies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nanumsquareeb"
        android:text="@string/oral_supplies"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_oral_supplies">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/nanumsquareeb"
            android:gravity="center_horizontal"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:tag="칫솔"
            android:checked="false"
            android:textColor="@color/colorPrimaryDark"
            android:text="칫솔"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-1dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/background_dark"
            android:checked="false"
            android:fontFamily="@font/nanumsquareeb"
            android:gravity="center_horizontal"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:tag="치약"
            android:text="치약"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-1dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/background_dark"
            android:checked="false"
            android:fontFamily="@font/nanumsquareeb"
            android:gravity="center_horizontal"

            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:tag="치실"
            android:text="치실"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-1dp"
            android:layout_weight="1"
            android:background="@drawable/radio_button_selector"
            android:button="@android:color/background_dark"
            android:checked="false"
            android:fontFamily="@font/nanumsquareeb"
            android:gravity="center_horizontal"

            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:tag="구강청결제"
            android:text="구강청결제"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="128dp"
        android:background="@drawable/rectangle_31"
        android:fontFamily="@font/nanumsquareb"
        android:text="@string/register"
        android:textColor="@color/browser_actions_bg_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:clickable="false"
        android:editable="false"
        android:ems="10"
        android:enabled="true"
        android:inputType="date|datetime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_buy_Date" />

</androidx.constraintlayout.widget.ConstraintLayout>